--- a/Projet/src/main/resources/templates/index.html
+++ b/Projet/src/main/resources/templates/index.html
@@ -32,15 +32,33 @@
 		</form>
 	</div>
 	
-	<div class="col-sm-7" id="postResultDiv">
+	<div class="col-sm-12" id="postResultDiv">
 	</div>
 	
-	<div class="col-sm-7" style="margin:20px 0px 20px 0px">
+	<div class="col-sm-12" style="margin:20px 0px 20px 0px">
 		<button id="getAllCustomerId" type="button" class="btn btn-primary">Get All Customers</button>
 		<div class="dropdown-content" id="getResultDiv" style="padding:20px 10px 20px 50px">
 	        <ul class="list-group">
 	    	</ul>
     	</div>
+	</div>
+
+	<div class="col-sm-12">
+		<div class="content row" data-role="content" id="content" >
+			<form class="form-inline" style="margin:20px 20px 20px 20px" id="volForm">
+				<div id="airportCombobox">
+					<div class="col-sm-3">
+						<select name="depart" class="form-control" id="depart" >
+						</select>
+					</div>
+					<div class="col-sm-3">
+						<select name="arrive" class="form-control" id="arrive" >
+						</select>
+					</div>
+					<button type="submit" class="btn btn-default" style="margin-left:20px; margin-right:5px">Submit</button>
+				</div>
+			</form>
+		</div>
 	</div>
 	
 </div>
